--- a/public/style-page.html
+++ b/public/style-page.html
@@ -14,9 +14,8 @@
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
-<body>
+<body class="page-about">
 <div id="wrapper">
-
 	<header id="header">
 		<section class="header-top">
 			<div class="wrap">
@@ -312,9 +311,10 @@
 	</div>
 </footer><!-- #footer -->
 
-<script src="js/vendor/jquery-1.8.3.min.js"></script>
-<script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
-<script src="js/jquery.carouFredSel-6.1.0-packed.js"></script>
+<script type="text/javascript" src="js/vendor/jquery-1.8.3.min.js"></script>
+<script type="text/javascript" src="js/plugins.js"></script>
+<script type="text/javascript" src="js/jquery.parallax.min.js"></script>
+<script type="text/javascript" src="js/jquery.carouFredSel-6.1.0-packed.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
