--- a/public/polozhenie.html
+++ b/public/polozhenie.html
@@ -132,8 +132,12 @@
 
 <script type="text/javascript" src="js/vendor/jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="js/plugins.js"></script>
-<script type="text/javascript" src="js/jquery.parallax.min.js"></script>
+<script type="text/javascript" src="js/jquery.jscrollpane.min.js"></script>
 <script type="text/javascript" src="js/jquery.carouFredSel-6.1.0-packed.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/jquery.placeholder.js"></script>
+<script type="text/javascript" src="js/plax.js"></script>
+<script type="text/javascript" src="js/cusel-min-2.5.js"></script>
+<script type="text/javascript" src="js/jquery.ezmark.min.js"></script>
+
 </body>
 </html>
