--- a/public/sort.html
+++ b/public/sort.html
@@ -100,7 +100,7 @@
 				<h1>ЛАУРЕАТЫ 2012 ГОДА</h1>
 				<button class="button-toggle-filter"><span>Фильтр</span></button>
 			</div>
-			<div class="filter-work">
+			<div class="filter-work" style="display:block;">
 				<form action="/" method="get">
 					<div class="filter-work-nominations">
 						<h2>Номинации:</h2>
