--- a/public/index1.html
+++ b/public/index1.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title></title>
 	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=1024, initial-scale=0.8, maximum-scale=1">
 
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/jquery.jscrollpane.css">
@@ -118,6 +118,7 @@
 				<img src="./img/entry-ru.png" width="720" height="265" alt="" title="" />
 			</section>
 
+			<!--
 			<section class="center b-entry">
 				<img src="./img/entry-en.png" width="720" height="265" alt="" title="" />
 			</section>
@@ -125,6 +126,7 @@
 			<section class="center b-entry">
 				<img src="./img/entry-de.png" width="720" height="265" alt="" title="" />
 			</section>
+			-->
 		</section>
 
 		<h1 class="wrap">ближайшие мероприятия премии</h1>
