--- a/public/polozhenie.html
+++ b/public/polozhenie.html
@@ -9,15 +9,19 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title></title>
 	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=1024, initial-scale=0.8, maximum-scale=1">
 
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 	<script type="text/javascript" src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body class="page-about-award">
-<div class="parallax1"></div>
-<div class="parallax2"></div>
+<div class="parallax1">
+	<img class="parallax" src="./img/parallax/parallax1.png">
+</div>
+<div class="parallax2">
+	<img class="parallax" src="./img/parallax/parallax2.png">
+</div>
 <div id="wrapper">
 	<header id="header">
 		<section class="header-top">
